Pequenas alterações de layout

--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
                 <label for="d">Diamentro da bomba - D(m)</label>
                 <input type="text" id="d" name="d" onchange="autoCalculate('y1_nib', ['qti', 'hti', 'n_rpm'])" value="0.123">
             </div>     
-            <!--div class="field">
+            <div class="field">
                 <label for="p_kw">P (kW)</label>
                 <input type="text" id="p_kw" name="p_kw" onchange="autoCalculate('y1_nib', ['qti', 'hti', 'n_rpm'])" value="16.50">
-            </div --> 
+            </div> 
             <div class="field">
                 <label for="y1_ns_rps">Velocidade específica - N(rps)</label>
                 <input type="text" id="y1_ns_rps" name="y1_ns_rps" readonly="true">
