Corrigindo aviso de comparação entre turbina-bomba para valvula-turbina

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <form id="form">
-        <h2>Aproveitamento</h2>
+        <h2>Aproveitamento PRV</h2>
         <div class="model" id="aproveitamento">
             <div class="field">
                 <label for="qti">Fluxo da Valvula - Qti (m³/s)</label>
