--- a/index.html
+++ b/index.html
@@ -249,10 +249,12 @@
         </div>
         <input type="button" value="Gerar Grafico" onclick="generatePlot(['coeficiente_altura_turbina_mpe', 'coeficiente_vazao_turbina_mpe', 'rotacao_bomba_rps', 'diametro_bomba', 'eficiencia_real'])">
         <div id="aviso-campo"><span id="aviso"></span></div>
-        <div id="grafico"></div>
-        <div id="dados">
-            <ul id="dados_listar">
-            </ul>
+        <div class="grafico-section">
+                <div id="grafico"></div>
+                <div id="dados">
+                    <ul id="dados_listar">
+                    </ul>
+                </div>
         </div>
     </section>
     <footer>
